hphp/test/slow/type_annotation/shape_typedef_with_multiple_optional_tokens.php.expectf
Fatal error: An expression is expected here. in %s/test/slow/type_annotation/shape_typedef_with_multiple_optional_tokens.php on line 4